best-practices-vpol/restrict-service-external-ips/.kyverno-test/resource.yaml
apiVersion: v1
kind: Service
metadata:
  name: exception-external-ips
  namespace: test
spec:
  externalIPs: [10.0.0.1]
  ports:
  - port: 80
---
apiVersion: v1
kind: Service
metadata:
  name: goodservice01
  namespace: test
spec:
  selector:
    app: MyApp
  ports:
    - protocol: TCP
      port: 80
      targetPort: 9376
---
apiVersion: v1
kind: Service
metadata:
  name: badservice01
  namespace: test
spec:
  selector:
    app: MyApp
  ports:
    - protocol: TCP
      port: 80
      targetPort: 9376
  externalIPs:
    - 1.2.3.4
---
apiVersion: v1
kind: Service
metadata:
  name: badservice02
  namespace: test
spec:
  selector:
    app: MyApp
  ports:
    - protocol: TCP
      port: 80
      targetPort: 9376
  externalIPs:
    - 1.2.3.4
    - 37.10.11.53
