best-practices-vpol/restrict-service-external-ips/restrict-service-external-ips.yaml
apiVersion: policies.kyverno.io/v1
kind: ValidatingPolicy
metadata:
  annotations:
    policies.kyverno.io/minversion: 1.19.1
    policies.kyverno.io/category: Best Practices
    policies.kyverno.io/description: >-
      This policy restricts the use of externalIPs in Service resources.
      External IPs can pose security risks and should be carefully controlled.
    policies.kyverno.io/severity: medium
    policies.kyverno.io/title: Restrict External IPs
  name: restrict-external-ips
spec:
  evaluation:
    background:
      enabled: true
  matchConstraints:
    resourceRules:
      - apiGroups:
          - ''
        apiVersions:
          - v1
        operations:
          - CREATE
          - UPDATE
        resources:
          - services
  validationActions:
    - Audit
  validations:
    - expression: >-
        'externalIPs' in exceptions.allowedValues ||
        !has(object.spec.externalIPs) || size(object.spec.externalIPs) == 0
      message: externalIPs are not allowed.
