best-practices-vpol/restrict-service-external-ips/.kyverno-test/kyverno-test.yaml
apiVersion: cli.kyverno.io/v1alpha1
kind: Test
metadata:
  name: restrict-external-ips
policies:
- ../restrict-service-external-ips.yaml
resources:
- resource.yaml
exceptions:
- exceptions.yaml
results:
- kind: Service
  policy: restrict-external-ips
  resources:
  - badservice01
  result: fail
- kind: Service
  policy: restrict-external-ips
  resources:
  - badservice02
  result: fail
  isValidatingPolicy: true
- kind: Service
  policy: restrict-external-ips
  resources:
  - goodservice01
  result: pass
  isValidatingPolicy: true
- kind: Service
  policy: restrict-external-ips
  resources:
  - exception-external-ips
  result: pass
  isValidatingPolicy: true
